# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPLv2

  28 Sep 2007; Roy Marples <uberlord@gentoo.org>:

    rc_service_state now returns the state as a mask, which means that
    we can do things with just the one call making is more efficient.
    keymaps now sets unicode keyboard on all defined ttys, #192442 
    thanks to Pacho Ramos.
    net.sh now checks to see if root is net mounted if no predown function
    exists, #194074.
    enums are now fixed to specific values and are in UPPER CASE.

  26 Sep 2007; Roy Marples <uberlord@gentoo.org>:

    rc_is_env is now rc_env_bool and just works with boolean values.
    errno is set when it's not a boolean or does not exist.

  25 Sep 2007; Mike Frysinger <vapier@gentoo.org>:

    Skip consolefont setup when RC_TTY_NUMBER is set to 0.

    Add support for describing the options in the C programs.

    Retain behavior where `rc-update del foo` deletes foo from all runlevels.

    Retain behavior where `rc-update del` warns if nothing changed.

  24 Sep 2007; Mike Frysinger <vapier@gentoo.org>:

    Do not require portmap in netmount when nolock option is used with nfs
    mounts and fixup the test so that it actually works.

  24 Sep 2007; Roy Marples <uberlord@gentoo.org>:

    Fix pppd metric, #193574 thanks to Martin Väth.

  21 Sep 2007; Roy Marples <uberlord@gentoo.org>:

    Use a pty for prefixed output instead of pipes for stdout/stderr. This
    is so that programs can get information about the controlling terminal.
    This change was triggered by bug #188506 where it's possible that
    stdin, stdout and stderr didn't point to a terminal but ended up on one
    via our pipes. Using a pty means that stdout and stderr always point to
    a terminal, but we lose the ability to tell them apart.
    If there is not a pty available then we use un-prefixed output as normal.